force-app/main/default/objects/Lead/fields/Assignment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Notes__c</fullName>
    <description>Explains why and how this lead was assigned (rep, territory, specialty, capacity)</description>
    <inlineHelpText>Auto-populated by assignment trigger</inlineHelpText>
    <label>Assignment Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>