force-app/main/default/objects/Lead/fields/Lead_Source_Category__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Category__c</fullName>
    <description>Normalized lead source category used for intelligent assignment</description>
    <inlineHelpText>Select how this lead was sourced</inlineHelpText>
    <label>Lead Source Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>